# FlinkBot

./: .gitignore  README.md  pyproject.toml
data_ingestion/documentation/: crawler.ipynb  fire_crawler.ipynb
data_ingestion/github/: github_loader.ipynb
data_ingestion/jira_issues/: 0-500.csv  1000-1500.csv  1500-2000.csv  2000-2500.csv  2500-3000.csv  3000-3500.csv  3500-4000.csv  4000-4500.csv  4500-5000.csv  500-1000.csv  5000-5500.csv  5500-6000.csv  6000-6500.csv  6500-7000.csv  7000-7500.csv  7500-8000.csv  jql_to_csv.py
notebooks/: ingest.ipynb  ingest_deployment.ipynb  rag.ipynb  rag_flink.ipynb
