[tool.poetry]
name = "flinkbot"
version = "0.1.0"
description = ""
authors = ["Dipak Tandel <dipak.tandel96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-cohere = "^0.1.5"
pymilvus = "^2.4.3"
firecrawl-py = "^0.0.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
langchain-text-splitters = "^0.2.1"
tiktoken = "^0.7.0"
langchainhub = "^0.1.17"
langchain-google-genai = "^1.0.5"
grandalf = "^0.8"
sentence-transformers = "^3.0.0"
langchain-huggingface = "^0.0.2"
flashrank = "^0.2.5"
langchain-openai = "^0.1.8"
faiss-cpu = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
